V2:  Bulk Upload with output table added